# YoniRaviv_DocPulse

./: LICENSE  README.md  action.yml  entrypoint.sh  pyproject.toml
.github/workflows/: ci.yml
docs/superpowers/plans/: 2026-06-14-k8s-vendor-neutral-cli.md
docs/superpowers/specs/: 2026-06-14-k8s-vendor-neutral-cli-design.md
evals/: README.md
evals/cases/cs_extract_method_accurate/: doc.md  label.yml
evals/cases/cs_method_renamed_stale/: doc.md  label.yml
evals/cases/cs_signature_changed_stale/: doc.md  label.yml
evals/cases/cs_visibility_internal_accurate/: doc.md  label.yml
evals/cases/py_default_changed_stale/: doc.md  label.yml
evals/cases/py_internal_refactor_accurate/: doc.md  label.yml
evals/cases/py_optional_param_added_accurate/: doc.md  label.yml
evals/cases/py_removed_feature_stale/: doc.md  label.yml
evals/cases/py_rename_param_stale/: doc.md  label.yml
evals/cases/ts_behavior_changed_stale/: doc.md  label.yml
evals/cases/ts_comment_change_accurate/: doc.md  label.yml
evals/cases/ts_internal_rename_accurate/: doc.md  label.yml
src/docpulse/: __init__.py  ci.py  cli.py  command_runner.py  config.py  llm.py  pipeline.py
tests/unit/: test_ci.py  test_cli.py  test_cli_eval.py  test_cli_pipeline.py  test_cli_push.py  test_command_runner.py  test_config.py  test_doc_parser.py  test_eval_harness.py  test_git_context.py  test_index_store.py  test_link_graph.py  test_llm.py  test_pipeline_run.py  test_repair_harness.py  test_repo_markdown.py  test_summary.py  test_suspects.py  test_validator.py  test_verifier.py  test_verifier_tools.py
(+60 files in other folders)
